# CanYouFlow

./: README.md  db.sqlite3  manage.py  pyproject.toml
authentication/: forms.py  urls.py  views.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/components/views/: AllUsersView.js  HomeView.js  IndexView.js  Login.js  Navigation.js  Register.js  StudioView.js
custom_user_app/: models.py  urls.py  views.py
cyf1/: asgi.py  settings.py  urls.py
server/: db.sqlite3  pyproject.toml
server/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
server/authentication/migrations/: 0001_initial.py
server/beat/: apps.py  models.py
server/custom_user_app/: admin.py  serializers.py
server/custom_user_app/migrations/: 0001_initial.py  0002_customuser_created_at.py
server/cyf1/: settings.py  urls.py  wsgi.py
server/game/: admin.py  models.py  serializers.py  urls.py  views.py
server/game/migrations/: 0001_initial.py
server/static/css/: style.css
server/static/js/: script.js
server/templates/: base.html  generic_form.html  index.html  user_detail.html  welcome.html
templates/: all_users.html  base.html  welcome.html
