[tool.poetry]
name = "cyf1"
version = "0.1.0"
description = ""
authors = ["Jamal Smilez <jgrigz1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
SpeechRecognition = "^3.8.1"
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
